--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
+<!DOCTYPE html>
+<html lang="Ru">
+    <head>
+        <meta charset="utf-8">
+        <title>Device - Главная страница</title>
+    </head>
+    <body>
+        <header class="main-header">
+            <h1 class="main-header-navigation">Device</h1>
+            <nav>
+                <p class="main-header-form">
+                    <!-- Тут поиск -->
+                </p>
+                <ul class="user-navigation">
+                    <li class="login-link">Вход</li>                    
+                </ul>
+                <ul class="cart-navigation">                    
+                    <li>
+                        <a href="compare.html"> Сравнить</a>
+                    </li>
+                    <li>
+                        <a href="cart.html">Корзина</a>
+                    </li>
+                </ul>
+                <ul class="site-navigation">
+                    <li>
+                        <a href="catalog.html">Каталог товаров</a>
+                    </li>
+                    <li>
+                        <a href="delivery.html">Доставка</a>
+                    </li>
+                    <li>
+                        <a href="warranty.html">Гарантия</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="container">
+            <section class="adv-section">
+                <h1 class="hidden-header">Реклама лучшей палки</h1>
+                <div class="adv-section-image">
+                    <img src="" alt="Картинка самой длинной селфи-палки">
+                </div>
+                <div class="adv-section-description">
+                    <h2 class="adv-section--desctription-title"></h2>
+                    <p class="adv-section--desctription-text">
+                        Самая длинная палка для селфи доступна в нашем магазине.
+                        Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+                    </p>
+                    <p class="adv-section--desctription-additional">
+                        Подробнее
+                    </p>
+                    <table class="adv-section-description-table">
+                        <tr class="adv-section-description-table-1st">
+                            <td>8.5м</td>
+                            <td>5кг</td>
+                            <td>карбон</td>
+                        </tr>
+                        <tr class="adv-section-description-table-2st">
+                            <td>длина палки</td>
+                            <td>вес палки</td>
+                            <td>материал</td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+            <section class="popular">
+                <h1 class="hidden-header">Разделы продуктов</h1>
+                <nav class="popular-nav">
+                    
+                    <ul class="popular-nav-list">
+                        <li class="popular-vr">
+                            виртуальная реальность
+                        </li>                        
+                        <li class="popular-monopad">
+                            монопады для селфи
+                        </li>
+                        <li class="popular-action">
+                            экшн-камеры
+                        </li>
+                        <li class="popular-fittness">
+                            фитнес браслеты
+                        </li>
+                        <li class="popular-smart-watch">
+                            умные часы
+                        </li>
+                        <li class="popular-quadro">
+                            квадрокоптеры
+                        </li>
+                    </ul>
+                </nav>
 
+            </section>
+
+            <section class="services">
+                <div class="services-left">
+                    <ul class="services-list">
+                        <li class="services-list-sel">
+                            Доставка
+                        </li>
+                        <li class="services-list-unsel">
+                            Гарантия
+                        </li>
+                        <li class="services-list-unsel">
+                            Кредит
+                        </li>
+                    </ul>
+                </div>
+                <div class="services-right-visible">
+                    <h2>Доставка</h2>
+                    <p>
+                        Мы с удовольствием доставим ваш товар прямо к вашему 
+                        подъезду совершенно бесплатно! Ведь мы неплохо заработаем, 
+                        поднимая его на ваш этаж.
+                    </p>
+                </div>
+                <div class="services-right-invisible">
+                    <h2>Гарантия</h2>
+                    <p>
+                        Если из-за возгорания купленного у нас товара у вас сгорит дом — 
+                        не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.
+                    </p>
+                <div class="services-right-invisible">
+                    <h2>Кредит</h2>
+                    <p>
+                        Залезть в долговую яму стало проще! 
+                        Кредитные консультанты подберут для вас наиболее выгодные 
+                        условия кредита. Выгодные для нашего банка, разумеется.
+                    </p>
+            </section>
+            <section class="logotypes">
+                <ul class="logotypes-list">
+                    <li class="logo1">
+                        <img src="" alt="1-й лготип">
+                    </li>
+                    <li class="logo2">
+                        <img src="" alt="2-й лготип">
+                    </li>
+                    <li class="logo3">
+                        <img src="" alt="3-й лготип">
+                    </li>
+                    <li class="logo4">
+                        <img src="" alt="4-й лготип">
+                    </li>
+                </ul>
+            </section>
+            <section class="last-section">
+                <h1 class="hidden-header">Последняя секция</h1>
+                <p>
+                    
+                </p>
+            </section>
+        </main>
+    </body>
+</html>
