Изменил что то, не помню уже

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <header class="header-logo">
-            <h1 class="Logo">Device</h1>
+            <a href="index.html"><h1>Device</h1></a>
         </header>
         </header>
         <header class="main-header">            
             <nav class="main-navigation">
                 <p class="main-header-form">
-                    <label for="search-input" class="visually-hidden"> поиск по тексту</label>
-                    <input id="search-input" type="text" placeholder="поиск по сайту">
+                    <label for="search-input" class="visually-hidden">Поиск по тексту</label>
+                    <input id="search-input" type="text" placeholder="Поиск по сайту">
                 </p>
 
                 <ul class="user-navigation">
